# Gauge

./: .dockerignore  .gitignore  Dockerfile  MODELING.md  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.mypy_cache/3.10/: cache.0.db-journal
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.js  App.tsx  api.js  api.ts  index.css
frontend/src/components/: Blog.tsx  ChatPanel.js  ChatPanel.tsx  DocChatPage.js  DocChatPage.tsx  IntakeWizard.tsx  PDFUpload.tsx  PredictorPage.js  PredictorPage.tsx  ResultCard.js  ResultCard.tsx  Select.js  Select.tsx  Slider.js  Slider.tsx  Toggle.js  Toggle.tsx  WhatIfChart.js  WhatIfChart.tsx
reports/: benchmark.json
src/gauge/: api.py  eval.py  main.py
src/gauge/benefits/: calculator.py  (+2 more)
src/health_app/: api.py  main.py
src/health_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py
tests/e2e/: test_docchat_journeys.py  test_journeys.py  test_predictor_journeys.py  test_session_journeys.py
tests/integration/: test_api.py  test_docchat_api.py  test_main.py  test_predictor_api.py  test_saved_estimates_api.py  test_session_api.py
tests/unit/: test_annual_cost.py  test_calculator.py  test_dataset.py  test_docchat_chunker.py  test_docchat_extractor.py  test_docchat_index.py  test_docchat_llm.py  test_docchat_service.py  test_meps_loader.py  test_models.py  test_plan_extract.py  test_predictor.py  test_real_dataset.py  test_saved_estimate_store.py  test_session_store.py  test_sqlite_stores.py  test_whatif.py
(+39 files in other folders)
